[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pystk2-gymnasium"
version = "0.7.7"
description = "Gymnasium wrapper for PySTK2 with bundled PySuperTuxKart2"
readme = "README.md"
authors = [
  { name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr" },
]
license = { text = "GPL" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "gymnasium>=0.29.0",
  "numpy",
  "platformdirs",
  "requests"
]

[project.urls]
homepage = "https://github.com/ml-arena/pystk2-gymnasium"
repository = "https://github.com/ml-arena/pystk2-gymnasium"

[tool.scikit-build]
cmake.args = [
  "-DBUILD_RECORDER=0",
  "-DCHECK_ASSETS=off",
  "-DUSE_WIIUSE=off",
  "-DUSE_CRYPTO_OPENSSL=off",
  "-DUSE_SQLITE3=off",
  "-DNO_SHADERC=on",
  "-DCMAKE_BUILD_TYPE=Release",
  # Optimize for faster builds in CI
  "-DCMAKE_CXX_FLAGS=-O2 -pipe",
  "-DCMAKE_C_FLAGS=-O2 -pipe"
]
# Include both Python packages from src/ and CMake install() targets
# The pystk2 module will be installed at wheel root via CMake install()
# The pystk2_gymnasium package will be included from src/
wheel.packages = ["src/pystk2_gymnasium"]
# Don't strip symbols for debugging if needed
install.strip = false
# Use ninja for faster builds if available
ninja.make-fallback = true
